--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME="Furniture"
+APP_NAME="E-Club"
 APP_ENV=production
 APP_KEY=base64:SOtD+qwId66ajqyfY6G/7oN+yB9tQO1Wl4QVcCcGh44=
 APP_DEBUG=false
-APP_URL=https://furniture.nexgroup.biz
+APP_URL=https://e-club.nexgroup.biz
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,9 +19,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=nexgroup_furniture
-DB_USERNAME=nexgroup_furniture
-DB_PASSWORD=nexgroup_furniture
+DB_DATABASE=nexgroup_e-club
+DB_USERNAME=nexgroup_e-club
+DB_PASSWORD=nexgroup_e-club
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
