--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME="E-Club"
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:SOtD+qwId66ajqyfY6G/7oN+yB9tQO1Wl4QVcCcGh44=
-APP_DEBUG=false
-APP_URL=https://e-club.nexgroup.biz
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -16,12 +16,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=nexgroup_e-club
-DB_USERNAME=nexgroup_e-club
-DB_PASSWORD=nexgroup_e-club
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=nexgroup_e-club
+# DB_USERNAME=nexgroup_e-club
+# DB_PASSWORD=nexgroup_e-club
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
